updated specular and imporved shadow brightness

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -9,10 +9,10 @@ screen.Sun-Moon-Sky =SUN_ROTATION SUN_ILLUMINANCE MOON_ILLUMINANCE LIGHT_INTENSI
 screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
-screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES
+screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE
 screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
 screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
 screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH
 
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE
