Added emissives and improved lighting

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -3,10 +3,10 @@
 //uniform.float.waterEnterTime = smooth(if(isEyeInWater)60, 0)
 //iris.features.optional=BLOCK_EMISSION_ATTRIBUTE
 
-screen = [Lighting-Shading] [Atmosphere] [Post-Processing]
+screen = [Lighting-Shading] [Atmosphere] [Post-Processing] DO_RESOURCEPACK_PBR
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]
 screen.Sun-Moon-Sky =SUN_ROTATION SUN_ILLUMINANCE MOON_ILLUMINANCE LIGHT_INTENSITY SKY_INTENSITY NIGHT_SKY_INTENSITY    DO_AMD_SKY_FIX
-screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS
+screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE
