--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -6,7 +6,7 @@
 screen = [Lighting-Shading] [Atmosphere] [Post-Processing] DO_RESOURCEPACK_PBR
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]
 screen.Sun-Moon-Sky =SUN_ROTATION SUN_ILLUMINANCE MOON_ILLUMINANCE LIGHT_INTENSITY SKY_INTENSITY NIGHT_SKY_INTENSITY    DO_AMD_SKY_FIX
-screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION
+screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION EMISSIVE_MULTIPLIER
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE
@@ -15,4 +15,4 @@ screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
 screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH
 
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE 
