added basis for physbased bloom, overhauled lighting

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,7 +1,7 @@
 //texture.noise = textures/noisetex.png
-//iris.features.required=SEPARATE_HARDWARE_SAMPLERS 
+//iris.features.required= SEPARATE_HARDWARE_SAMPLERS 
 //uniform.float.waterEnterTime = smooth(if(isEyeInWater)60, 0)
-//iris.features.optional=BLOCK_EMISSION_ATTRIBUTE
+//iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 
 screen = [Lighting-Shading] [Atmosphere] [Post-Processing] DO_RESOURCEPACK_PBR
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]
