--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,5 @@
 //texture.noise = textures/noisetex.png
+//customTexture.caustics = textures/caustics.png
 //iris.features.required= SEPARATE_HARDWARE_SAMPLERS 
 //uniform.float.waterEnterTime = smooth(if(isEyeInWater)60, 0)
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
