fixed specular fully, improved water. added sky reflection

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,9 +1,8 @@
 //texture.noise = textures/noisetex.png
-//customTexture.caustics = textures/caustics.png
 //iris.features.required= SEPARATE_HARDWARE_SAMPLERS 
 //uniform.float.waterEnterTime = smooth(if(isEyeInWater)60, 0)
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
-
+blend.gbuffers_hand=off
 screen = [Lighting-Shading] [Atmosphere] [Post-Processing] DO_RESOURCEPACK_PBR
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]
 screen.Sun-Moon-Sky =SUN_ROTATION SUN_ILLUMINANCE MOON_ILLUMINANCE LIGHT_INTENSITY SKY_INTENSITY NIGHT_SKY_INTENSITY    DO_AMD_SKY_FIX
