--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -11,9 +11,9 @@ screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION 
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE
-screen.Post-Processing = screen = [Tonemapping] [Color-Grading] 
+screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
 screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
+screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH BLOOM_RADIUS
 
-
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY GODRAYS_EXPOSURE 
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS
