--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,3 +1,3 @@
 block.101 = minecraft:water minecraft:flowing_water
 
-block.102 = minecraft:glowstone
+block.102 = minecraft:soul_torch minecraft:soul_lantern
