--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -11,10 +11,10 @@ screen.Lighting-Colors = SUN_R  MOON_G  SUN_B  MOON_R SUN_G  MOON_B
 screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION EMISSIVE_MULTIPLIER
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
-screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B
+screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE GODRAY_ASYMMETRY GODRAY_DENSITY GODRAY_R GODRAY_G GODRAY_B
 screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
 screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
 screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH BLOOM_RADIUS
 
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY
