--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -9,7 +9,7 @@ screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]
 screen.Sun-Moon-Sky = SUN_ROTATION SUN_ILLUMINANCE MOON_ILLUMINANCE LIGHT_INTENSITY SKY_INTENSITY NIGHT_SKY_INTENSITY screen = [Lighting-Colors]
 screen.Lighting-Colors = SUN_R  MOON_G  SUN_B  MOON_R SUN_G  MOON_B
 screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION EMISSIVE_MULTIPLIER
-screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION
+screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION SHADOW_SAMPLES
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE GODRAY_ASYMMETRY GODRAY_DENSITY GODRAY_R GODRAY_G GODRAY_B
 screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
@@ -17,4 +17,4 @@ screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
 screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH BLOOM_RADIUS
 
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES
