new bloom/shadow changes

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -15,6 +15,6 @@ screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE GODRAY_ASYMMETR
 screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
 screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
-screen.Bloom = DO_BLOOM BLOOM_INTENSITY BLOOM_STRENGTH BLOOM_RADIUS
+screen.Bloom = DO_BLOOM BLOOM_QUALITY BLOOM_RADIUS
 
-sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_INTENSITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES
+sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_QUALITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES
