--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -11,10 +11,11 @@ screen.Lighting-Colors = SUN_R  MOON_G  SUN_B  MOON_R SUN_G  MOON_B
 screen.Materials = HARDCODED_METAL HARDCODED_ROUGHNESS DO_RESOURCEPACK_EMISSION EMISSIVE_MULTIPLIER
 screen.Shadows = DO_SOFT_SHADOW     SHADOW_SOFTNESS SHADOW_QUALITY SHADOW_MAP_RESOLUTION SHADOW_SAMPLES
 screen.Atmosphere = DO_DISTANCE_FOG FOG_DENSITY     DO_WATER_FOG  WATER_FOG_DENSITY screen = [Godrays] 
-screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAYS_EXPOSURE GODRAY_ASYMMETRY GODRAY_DENSITY GODRAY_R GODRAY_G GODRAY_B
-screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom]
+screen.Godrays = GODRAYS_ENABLE GODRAYS_SAMPLES GODRAY_ASYMMETRY GODRAY_DENSITY GODRAY_R GODRAY_G GODRAY_B
+screen.Post-Processing = screen = [Tonemapping] [Color-Grading] [Bloom] [Anti-Aliasing]
 screen.Tonemapping = TONEMAPPING_TYPE
 screen.Color-Grading = BRIGHTNESS CONTRAST SATURATION
 screen.Bloom = DO_BLOOM BLOOM_QUALITY BLOOM_RADIUS
+screen.Anti-Aliasing = DO_FXAA
 
 sliders =  BRIGHTNESS SATURATION CONTRAST HARDCODED_METAL HARDCODED_ROUGHNESS BLOOM_QUALITY BLOOM_STRENGTH GODRAYS_EXPOSURE BLOOM_RADIUS GODRAY_ASYMMETRY GODRAY_R GODRAY_G GODRAY_B SUN_R SUN_G SUN_B MOON_R MOON_G MOON_B GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES
