--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -3,4 +3,4 @@ block.101 = minecraft:water minecraft:flowing_water
 block.102 = minecraft:soul_torch minecraft:soul_lantern
 
 
-block.103 = minecraft:white_stained_glass minecraft:black_stained_glass minecraft:red_stained_glass minecraft:blue_stained_glass minecraft:yellow_stained_glass minecraft:purple_stained_glass minecraft:gray_stained_glass minecraft:green_stained_glass minecraft:brown_stained_glass minecraft:orange_stained_glass minecraft:magenta_stained_glass minecraft:light_blue_stained_glass minecraft:lime_stained_glass minecraft:light_gray_stained_glass minecraft:magenta_stained_glass minecraft:cyan_stained_glass minecraft:slime_block minecraft:honey_block minecraft:ice
+block.103 = minecraft:nether_portal
