--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -3,4 +3,4 @@ block.101 = minecraft:water minecraft:flowing_water
 block.102 = minecraft:soul_torch minecraft:soul_lantern
 
 
-block.103 = minecraft:nether_portal
+block.103 = minecraft:nether_portal minecraft:beacon
