--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -6,7 +6,7 @@ screen.Materials = EMISSIVE_MULTIPLIER DO_SSR SSR_STEPS
 screen.Shadows = LIGHTING_GLSL SHADOW_RESOLUTION SHADOW_SOFTNESS SHADOW_SAMPLES 
 screen.Atmosphere = DISTANCE_FOG_GLSL     WATER_FOG_GLSL  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_GLSL GODRAYS_SAMPLES GODRAY_DENSITY 
-screen.Post-Processing = screen =[Anti-Aliasing]
+screen.Post-Processing =[Anti-Aliasing]
 screen.Anti-Aliasing = FXAA_GLSL
 
 sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES
