--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -4,3 +4,8 @@ block.102 = minecraft:soul_torch minecraft:soul_lantern
 
 
 block.103 = minecraft:nether_portal minecraft:beacon
+
+#ifdef IRIS_TAG_SUPPORT
+  block.104 = %minecraft:leaves %minecraft:flowers %minecraft:snow %minecraft:tall_flowers minecraft:short_grass %minecraft:cave_vines minecraft:moss_block  minecraft:pale_moss_block minecraft:vine minecraft:pale_hanging_moss minecraft:pale_moss_carpet minecraft:bamboo minecraft:tall_grass minecraft:kelp
+
+#endif
