bloom and reworked fogs

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,6 +1,6 @@
 blend.gbuffers_hand=off
 
-
+uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 
 
 screen = [Lighting-Shading] [Atmosphere] [Post-Processing] 
