--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -7,5 +7,6 @@ block.103 = minecraft:nether_portal minecraft:beacon
 
 #ifdef IRIS_TAG_SUPPORT
   block.104 = %minecraft:leaves %minecraft:flowers %minecraft:snow %minecraft:tall_flowers minecraft:short_grass %minecraft:cave_vines minecraft:moss_block  minecraft:pale_moss_block minecraft:vine minecraft:pale_hanging_moss minecraft:pale_moss_carpet minecraft:bamboo minecraft:tall_grass minecraft:kelp minecraft:large_fern minecraft:fern minecraft:bush minecraft:bamboo_leaf
-
 #endif
+
+block.105 = minecraft:iron_block minecraft:gold_block minecraft:copper_block minecraft:chiseled_copper minecraft:copper_grate minecraft:cut_copper minecraft:iron_door minecraft:iron_trapdoor
