--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,16 +1,18 @@
 blend.gbuffers_hand=off
 
+//iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 
 
-screen = [Lighting-Shading] [Atmosphere] [Post-Processing] 
+screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Post-Processing] 
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]  
 screen.Sun-Moon-Sky = SUN_ROTATION 
-screen.Materials = EMISSIVE_MULTIPLIER HARDCODED_SSS SSS_INTENSITY DO_SSR BINARY_REFINEMENT SSR_STEPS
+screen.Materials =  HARDCODED_METAL <empty> <empty> EMISSIVE_MULTIPLIER SSS_INTENSITY <empty> <empty> DO_SSR BINARY_REFINEMENT SSR_STEPS
 screen.Shadows = LIGHTING_GLSL SHADOW_RESOLUTION SHADOW_DISTANCE SHADOW_SOFTNESS SHADOW_SAMPLES 
 screen.Atmosphere = DISTANCE_FOG_GLSL     WATER_FOG_GLSL  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_GLSL GODRAYS_SAMPLES GODRAY_DENSITY 
-screen.Post-Processing =[Anti-Aliasing] BLOOM_GLSL
+screen.Post-Processing =[Anti-Aliasing] [Color-Adjustments] BLOOM_GLSL
 screen.Anti-Aliasing = FXAA_GLSL
+screen.Color-Adjustments = BRIGHTNESS SATURATION CONTRAST
 
-sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY
+sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY BRIGHTNESS SATURATION CONTRAST
