--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -7,7 +7,7 @@ uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Post-Processing] 
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]  
 screen.Sun-Moon-Sky = SUN_ROTATION 
-screen.Materials =  HARDCODED_METAL <empty> <empty> EMISSIVE_MULTIPLIER SSS_INTENSITY <empty> <empty> DO_SSR BINARY_REFINEMENT SSR_STEPS
+screen.Materials =  HARDCODED_METAL <empty> <empty> <empty> EMISSIVE_MULTIPLIER SSS_INTENSITY <empty> <empty> DO_SSR BINARY_REFINEMENT ROUGH_REFLECTION SSR_STEPS
 screen.Shadows = LIGHTING_GLSL SHADOW_RESOLUTION SHADOW_DISTANCE SHADOW_SOFTNESS SHADOW_SAMPLES 
 screen.Atmosphere = DISTANCE_FOG_GLSL     WATER_FOG_GLSL  WATER_FOG_DENSITY screen = [Godrays] 
 screen.Godrays = GODRAYS_GLSL GODRAYS_SAMPLES GODRAY_DENSITY 
