idk ive changed alot

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,5 @@
 blend.gbuffers_hand=off
+clouds = off
 
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
@@ -8,11 +9,11 @@ screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphe
 screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]  
 screen.Sun-Moon-Sky = SUN_ROTATION 
 screen.Materials =  HARDCODED_METAL <empty> <empty> <empty> EMISSIVE_MULTIPLIER SSS_INTENSITY <empty> <empty> DO_SSR BINARY_REFINEMENT ROUGH_REFLECTION SSR_STEPS
-screen.Shadows = LIGHTING_GLSL SHADOW_RESOLUTION SHADOW_DISTANCE SHADOW_SOFTNESS SHADOW_SAMPLES 
+screen.Shadows = LIGHTING_GLSL PIXELATED_LIGHTING SHADOW_RESOLUTION SHADOW_DISTANCE SHADOW_SOFTNESS SHADOW_SAMPLES 
 screen.Atmosphere = DISTANCE_FOG_GLSL     WATER_FOG_GLSL  WATER_FOG_DENSITY screen = [Godrays] 
-screen.Godrays = GODRAYS_GLSL GODRAYS_SAMPLES GODRAY_DENSITY 
+screen.Godrays = VOLUMETRIC_LIGHTING GODRAYS_SAMPLES GODRAY_DENSITY 
 screen.Post-Processing =[Anti-Aliasing] [Color-Adjustments] BLOOM_GLSL
 screen.Anti-Aliasing = FXAA_GLSL
 screen.Color-Adjustments = BRIGHTNESS SATURATION CONTRAST
 
-sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY BRIGHTNESS SATURATION CONTRAST
+sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY BRIGHTNESS SATURATION CONTRAST EMISSIVE_MULTIPLIER WATER_FOG_DENSITY
