--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,19 +1,45 @@
 blend.gbuffers_hand=off
-clouds = off
 
+
+#if DO_CLOUDS == 1
+    clouds = fancy
+#else
+    clouds = off
+#endif
+
+ 
+
+sun = false
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 
 
-screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Post-Processing] 
-screen.Lighting-Shading = screen = [Sun-Moon-Sky] [Materials] [Shadows]  
-screen.Sun-Moon-Sky = SUN_ROTATION 
+screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
+screen.columns = 1
+screen.Post-Processing.columns = 1
+screen.Atmosphere.columns = 2
+screen.Dawn-Colors.columns = 1
+screen.Day-Colors.columns = 1
+screen.Evening-Colors.columns = 1
+screen.Colors.columns = 1
+screen.Lighting-Shading = screen = [Sun-Moon] [Materials] [Shadows]  
+screen.Sun-Moon = SUN_ROTATION 
 screen.Materials =  HARDCODED_METAL <empty> <empty> <empty> EMISSIVE_MULTIPLIER SSS_INTENSITY <empty> <empty> DO_SSR BINARY_REFINEMENT ROUGH_REFLECTION SSR_STEPS
 screen.Shadows = LIGHTING_GLSL PIXELATED_LIGHTING SHADOW_RESOLUTION SHADOW_DISTANCE SHADOW_SOFTNESS SHADOW_SAMPLES 
-screen.Atmosphere = DISTANCE_FOG_GLSL     WATER_FOG_GLSL  WATER_FOG_DENSITY screen = [Godrays] 
-screen.Godrays = VOLUMETRIC_LIGHTING GODRAYS_SAMPLES GODRAY_DENSITY 
-screen.Post-Processing =[Anti-Aliasing] [Color-Adjustments] BLOOM_GLSL
+screen.Atmosphere = DISTANCE_FOG_GLSL AIR_FOG_DENSITY SUN_FOG_DENSITY DO_CLOUDS screen = [Godrays] <empty> screen = [Sky]
+screen.Sky = SUN_SIZE RAYLEIGH_COEFF screen = [Dawn-Colors] <empty> screen = [Day-Colors] <empty> screen = [Evening-Colors]
+screen.Dawn-Colors = DAWN_ZEN_R DAWN_ZEN_G DAWN_ZEN_B <empty> DAWN_HOR_R DAWN_HOR_G DAWN_HOR_B
+screen.Day-Colors = DAY_ZEN_R DAY_ZEN_G DAY_ZEN_B <empty> DAY_HOR_R DAY_HOR_G DAY_HOR_B
+screen.Evening-Colors = DUSK_ZEN_R DUSK_ZEN_G DUSK_ZEN_B <empty> DUSK_HOR_R DUSK_HOR_G DUSK_HOR_B
+screen.Godrays = VOLUMETRIC_LIGHTING GODRAYS_SAMPLES GODRAY_DENSITY screen = [Colors]
+screen.Colors = GABSORB_R GABSORB_G GABSORB_B
+screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY screen = [Water-Coefficients]
+screen.Water-Coefficients.columns = 1
+screen.Water-Coefficients = ABSORPTION_R ABSORPTION_G ABSORPTION_B ABSORPTION_COEFF <empty> SCATTER_R SCATTER_G SCATTER_B SCATTER_COEFF
+ 
+screen.Post-Processing =[Anti-Aliasing] [Color-Adjustments] [Bloom]
+screen.Bloom = BLOOM_GLSL BLOOM_RADIUS BLOOM_QUALITY BLOOM_STRENGTH
 screen.Anti-Aliasing = FXAA_GLSL
 screen.Color-Adjustments = BRIGHTNESS SATURATION CONTRAST
 
-sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY BRIGHTNESS SATURATION CONTRAST EMISSIVE_MULTIPLIER WATER_FOG_DENSITY
+sliders = GODRAY_DENSITY SHADOW_SOFTNESS SHADOW_SAMPLES SSR_STEPS GODRAYS_SAMPLES SHADOW_DISTANCE SSS_INTENSITY BRIGHTNESS SATURATION CONTRAST EMISSIVE_MULTIPLIER WATER_FOG_DENSITY ABSORPTION_R ABSORPTION_G ABSORPTION_B RAYLEIGH_COEFF SUN_SIZE SCATTER_R SCATTER_G SCATTER_B SCATTER_COEFF ABSORPTION_COEFF AIR_FOG_DENSITY SUN_FOG_DENSITY GABSORB_R GABSORB_G GABSORB_B DAY_ZEN_R DAY_ZEN_G DAY_ZEN_B DAY_HOR_R DAY_HOR_G DAY_HOR_B DAWN_ZEN_R DAWN_ZEN_G DAWN_ZEN_B DAWN_HOR_R DAWN_HOR_G DAWN_HOR_B DUSK_ZEN_R DUSK_ZEN_G DUSK_ZEN_B DUSK_HOR_R DUSK_HOR_G DUSK_HOR_B BLOOM_RADIUS BLOOM_QUALITY BLOOM_STRENGTH
