--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -14,7 +14,7 @@ sun = false
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 
 
-screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
+screen = NAME RESOURCE_PACK_SUPPORT DH_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
 screen.Atmosphere.columns = 1
