--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -36,7 +36,7 @@ screen.Evening-Colors = DUSK_ZEN_R DUSK_ZEN_G DUSK_ZEN_B <empty> DUSK_HOR_R DUSK
 screen.Night-Colors = NIGHT_ZEN_G NIGHT_ZEN_B NIGHT_HOR_R <emtpy NIGHT_HOR_G NIGHT_HOR_B
 screen.Godrays = VOLUMETRIC_LIGHTING GODRAYS_SAMPLES GODRAY_DENSITY screen = [Colors]
 screen.Colors = GABSORB_R GABSORB_G GABSORB_B
-screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY screen = [Water-Coefficients] [Waves]
+screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY <empty> screen = [Water-Coefficients] [Waves]
 screen.Waves = WAVE_SPEED WAVE_FREQUENCY WAVE_INTENSITY WAVE_RANDOMNESS WAVE_OCTAVES WAVE_SOFTNESS WAVE_PULL
 screen.Water-Coefficients.columns = 1
 screen.Water-Coefficients = ABSORPTION_R ABSORPTION_G ABSORPTION_B ABSORPTION_COEFF <empty> SCATTER_R SCATTER_G SCATTER_B SCATTER_COEFF
