removed 2x ndotl, indirect diffuse, godray fixes

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -13,6 +13,21 @@ sun = false
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 
+uniform float constantMood;
+uniform.float.moodSmooth = smooth(constantMood,0.0,0.5)
+
+uniform float sunAngle;
+## Floating value of the sine of sunAngle [-1.0, 1.0
+variable.float.sineSunAngle = sin(sunAngle * PI * 2.0)
+
+## Floating value when the sun is 0% or 100% up [0.0, 1.0]
+uniform.float.sunValue = max(sineSunAngle, 0)
+
+## Floating value when the moon is 0% or 100% up [0.0, 1.0]
+uniform.float.moonValue = max(-sineSunAngle, 0)
+
+## Floating value for sunset or sinrise is 0% or 100% up [0.0, 1.0]
+uniform.float.moonValue = 1.0 - abs(sineSunAngle)
 
 screen = NAME RESOURCE_PACK_SUPPORT DH_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
