finalizing some things

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -56,7 +56,7 @@ screen.Waves = WAVE_SPEED WAVE_FREQUENCY WAVE_INTENSITY WAVE_RANDOMNESS WAVE_OCT
 screen.Water-Coefficients.columns = 1
 screen.Water-Coefficients = ABSORPTION_R ABSORPTION_G ABSORPTION_B ABSORPTION_COEFF <empty> SCATTER_R SCATTER_G SCATTER_B SCATTER_COEFF
  
-screen.Post-Processing = [Anti-Aliasing] [Color-Adjustments] [Bloom]
+screen.Post-Processing = TONEMAPPING_TYPE [Anti-Aliasing] [Color-Adjustments] [Bloom]
 screen.Bloom = BLOOM_GLSL BLOOM_RADIUS BLOOM_QUALITY BLOOM_STRENGTH
 screen.Anti-Aliasing = FXAA_GLSL
 screen.Color-Adjustments = BRIGHTNESS SATURATION CONTRAST
