--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -29,7 +29,7 @@ uniform.float.moonValue = max(-sineSunAngle, 0)
 ## Floating value for sunset or sinrise is 0% or 100% up [0.0, 1.0]
 uniform.float.moonValue = 1.0 - abs(sineSunAngle)
 
-screen = NAME RESOURCE_PACK_SUPPORT DH_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
+screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
 screen.Atmosphere.columns = 1
@@ -51,8 +51,8 @@ screen.Evening-Colors = DUSK_ZEN_R DUSK_ZEN_G DUSK_ZEN_B <empty> DUSK_HOR_R DUSK
 screen.Night-Colors = NIGHT_ZEN_G NIGHT_ZEN_B NIGHT_HOR_R <emtpy NIGHT_HOR_G NIGHT_HOR_B
 screen.Godrays = VOLUMETRIC_LIGHTING GODRAYS_SAMPLES GODRAY_DENSITY screen = [Colors]
 screen.Colors = GABSORB_R GABSORB_G GABSORB_B
-screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY <empty> screen = [Water-Coefficients] [Waves]
-screen.Waves = WAVE_SPEED WAVE_FREQUENCY WAVE_INTENSITY WAVE_RANDOMNESS WAVE_OCTAVES WAVE_SOFTNESS WAVE_PULL
+screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY WAVES  screen = [Water-Coefficients] [Waves]
+screen.Waves =  WAVE_SPEED WAVE_FREQUENCY WAVE_INTENSITY WAVE_RANDOMNESS WAVE_OCTAVES WAVE_SOFTNESS WAVE_PULL
 screen.Water-Coefficients.columns = 1
 screen.Water-Coefficients = ABSORPTION_R ABSORPTION_G ABSORPTION_B ABSORPTION_COEFF <empty> SCATTER_R SCATTER_G SCATTER_B SCATTER_COEFF
  
