--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -11,8 +11,11 @@ blend.gbuffers_hand=off
 
 sun = false
 //iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
+uniform int biome;
+uniform int biome_category;
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
-
+uniform.bool.isColdBiome = in(biome, BIOME_SNOWY_PLAINS, BIOME_SNOWY_TAIGA, BIOME_GROVE, BIOME_FROZEN_RIVER, BIOME_ICE_SPIKES, BIOME_SNOWY_SLOPES, BIOME_FROZEN_PEAKS, BIOME_FROZEN_OCEAN)
+uniform.bool.isPaleGarden = in(biome, BIOME_PALE_GARDEN)
 uniform float constantMood;
 uniform.float.moodSmooth = smooth(constantMood,0.0,0.3)
 
