Improved waves, added SSR sky fallback

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -10,7 +10,8 @@ blend.gbuffers_hand=off
  
 
 sun = false
-//iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
+iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
+iris.featues.required = SEPARATE_HARDWARE_SAMPLERS
 uniform int biome;
 uniform int biome_category;
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
