--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -10,6 +10,7 @@ blend.gbuffers_hand=off
  
 
 sun = false
+
 iris.features.optional= BLOCK_EMISSION_ATTRIBUTE
 iris.featues.required = SEPARATE_HARDWARE_SAMPLERS
 uniform int biome;
@@ -33,6 +34,8 @@ uniform.float.moonValue = max(-sineSunAngle, 0)
 ## Floating value for sunset or sinrise is 0% or 100% up [0.0, 1.0]
 uniform.float.moonValue = 1.0 - abs(sineSunAngle)
 
+customTexture.cloudNoiseTex = /textures/perlinNoise.png
+
 screen = NAME RESOURCE_PACK_SUPPORT <empty> <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
@@ -54,7 +57,7 @@ screen.Day-Colors = DAY_ZEN_R DAY_ZEN_G DAY_ZEN_B <empty> DAY_HOR_R DAY_HOR_G DA
 screen.Evening-Colors = DUSK_ZEN_R DUSK_ZEN_G DUSK_ZEN_B <empty> DUSK_HOR_R DUSK_HOR_G DUSK_HOR_B
 screen.Night-Colors = NIGHT_ZEN_G NIGHT_ZEN_B NIGHT_HOR_R <emtpy NIGHT_HOR_G NIGHT_HOR_B
 screen.Sky-Blend-Points = ZENITH_BLEND HORIZON_BLEND GROUND_BLEND
-screen.Volumetrics = DO_VL_PCF VOLUMETRIC_FOG_DENSITY  VL_FRONTSCATTER_INTENSITY VL_BACKSCATTER_INTENSITY <empty> <empty> DO_FOG_HEIGHT VOLUMETRIC_MIN_HEIGHT VOLUMETRIC_MAX_HEIGHT <empty> <empty> <empty> VL_ANISO VL_ANISO_BACK 
+screen.Volumetrics = DO_VL_PCF VOLUMETRIC_FOG_DENSITY  VL_FRONTSCATTER_INTENSITY VL_BACKSCATTER_INTENSITY <empty> <empty> VL_ANISO VL_ANISO_BACK 
 screen.Godray-Colors = GABSORB_R GABSORB_G GABSORB_B
 screen.Water = WATER_FOG_GLSL WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY WAVES  screen = [Water-Coefficients] [Waves]
 screen.Waves =  WAVE_SPEED WAVE_FREQUENCY WAVE_INTENSITY WAVE_RANDOMNESS WAVE_OCTAVES WAVE_SOFTNESS WAVE_PULL
