final push - begin rewrite

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -17,6 +17,8 @@ uniform int biome;
 uniform int biome_category;
 uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
 uniform.bool.isColdBiome = in(biome, BIOME_SNOWY_PLAINS, BIOME_SNOWY_TAIGA, BIOME_GROVE, BIOME_FROZEN_RIVER, BIOME_ICE_SPIKES, BIOME_SNOWY_SLOPES, BIOME_FROZEN_PEAKS, BIOME_FROZEN_OCEAN)
+
+uniform.float.PaleGardenSmooth = smooth(2, if(biome == BIOME_PALE_GARDEN, 1.0, 0.0), 9.0, 5.0)
 uniform.bool.isPaleGarden = in(biome, BIOME_PALE_GARDEN)
 uniform float constantMood;
 uniform.float.moodSmooth = smooth(constantMood,0.0,0.3)
