updates to SSS, translucent fixes, fog distribution updates, etc

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,7 +1,7 @@
 block.101 = minecraft:water minecraft:flowing_water
 
 #ifdef IRIS_TAG_SUPPORT
-  block.104 = %minecraft:leaves %minecraft:flowers %minecraft:tall_flowers minecraft:short_grass %minecraft:cave_vines minecraft:moss_block  minecraft:pale_moss_block minecraft:vine minecraft:pale_hanging_moss minecraft:pale_moss_carpet minecraft:bamboo minecraft:tall_grass minecraft:kelp minecraft:large_fern minecraft:fern minecraft:bush minecraft:bamboo_leaf minecraft:seagrass minecraft:tall_seagrass minecraft:packed_ice minecraft:blue_ice
+  block.104 = %minecraft:leaves %minecraft:flowers %minecraft:tall_flowers minecraft:short_grass %minecraft:cave_vines minecraft:moss_block  minecraft:pale_moss_block minecraft:vine minecraft:pale_hanging_moss minecraft:pale_moss_carpet minecraft:bamboo minecraft:tall_grass minecraft:kelp minecraft:large_fern minecraft:fern minecraft:bush minecraft:bamboo_leaf minecraft:seagrass minecraft:tall_seagrass minecraft:packed_ice minecraft:blue_ice minecraft:snow minecraft:snow_block minecraft:powder_snow
 #endif
 
 
