--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -3,6 +3,7 @@ clouds = off
 sun = false
 moon = false
 
+
 #if MC_VERSION <= 12140
 uniform.float.PaleGardenSmooth = smooth(2, if(biome == BIOME_PALE_GARDEN, 1.0, 0.0), 9.0, 5.0)
 #else
@@ -12,14 +13,18 @@ uniform.float.PaleGardenSmooth   = 0.0
 
 customTexture.blueNoiseTex = /textures/stbn.bin TEXTURE_3D RGB8 128 128 64 RGB UNSIGNED_BYTE
 
-screen = NAME <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
+
+customTexture.looigi = /textures/loogi.png TEXTURE_2D RGB8 128 128 64 RGB UNSIGNED_BYTE
+
+
+screen = NAME LOOIGI <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
 screen.Atmosphere.columns = 1
 
 screen.Lighting-Shading = screen = [Shadows] [Materials]
 screen.Shadows = SUN_ROTATION SHADOW_RESOLUTION SHADOW_SAMPLES SHADOW_SOFTNESS SHADOW_DISTANCE
-screen.Materials = HC_SSS <empty> <empty> <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT
+screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT
 
 screen.Atmosphere = screen = [Sky] [Fog]
 screen.Sky = SUN_ANGLUAR_RADIUS_MULT MOON_ANGLUAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
