--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -14,21 +14,21 @@ uniform.float.PaleGardenSmooth   = 0.0
 customTexture.blueNoiseTex = /textures/stbn.bin TEXTURE_3D RGB8 128 128 64 RGB UNSIGNED_BYTE
 
 
-customTexture.looigi = /textures/loogi.png TEXTURE_2D RGB8 128 128 64 RGB UNSIGNED_BYTE
+customTexture.puddleTex = /textures/puddle_noise.png
 
 
-screen = NAME LOOIGI <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
+screen = NAME <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
 screen.Atmosphere.columns = 1
 
 screen.Lighting-Shading = screen = [Shadows] [Materials]
 screen.Shadows = SUN_ROTATION SHADOW_RESOLUTION SHADOW_SAMPLES SHADOW_SOFTNESS SHADOW_DISTANCE
-screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT
+screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty>  <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT
 
 screen.Atmosphere = screen = [Sky] [Fog]
-screen.Sky = SUN_ANGLUAR_RADIUS_MULT MOON_ANGLUAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
-screen.Fog = VOLUMETRICS VL_SAMPLES AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
+screen.Sky = SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
+screen.Fog = VOLUMETRICS VL_SAMPLES  VL_EXT AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
 screen.Fog-Phase = MORNING_PHASE DAY_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE <empty> <empty> <empty> FORWARD_PHASE_INTENSITY BACKWARD_PHASE_INTENSITY
 
 screen.Water = WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
@@ -37,4 +37,4 @@ screen.Post-Processing = screen = [Bloom] [Color-Grading]
 screen.Color-Grading = BRIGHTNESS SATURATION CONTRAST
 screen.Bloom = BLOOM_GLSL BLOOM_QUALITY BLOOM_RADIUS BLOOM_STRENGTH 
 
-sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGLUAR_RADIUS_MULT MOON_ANGLUAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY
+sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT
