--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -4,12 +4,21 @@ sun = false
 moon = false
 
 
+
 #if MC_VERSION <= 12140
 uniform.float.PaleGardenSmooth = smooth(2, if(biome == BIOME_PALE_GARDEN, 1.0, 0.0), 9.0, 5.0)
 #else
 #else
 uniform.float.PaleGardenSmooth   = 0.0
 #endif
+
+uniform.bool.isColdBiome = in(biome, BIOME_SNOWY_PLAINS, BIOME_SNOWY_TAIGA, BIOME_GROVE, BIOME_FROZEN_RIVER, BIOME_ICE_SPIKES, BIOME_SNOWY_SLOPES, BIOME_FROZEN_PEAKS, BIOME_FROZEN_OCEAN)
+
+uniform.bool.isHotBiome = in(biome_category, CAT_MESA, CAT_SAVANNA, CAT_DESERT)
+
+
+uniform.float.snowBiomeSmooth = smooth(2, if(!isColdBiome, 1.0, 0.0), 15.0, 7.0)
+uniform.float.hotBiomeSmooth = smooth(2, if(!isHotBiome, 1.0, 0.0), 25.0, 25.0)
 
 customTexture.blueNoiseTex = /textures/stbn.bin TEXTURE_3D RGB8 128 128 64 RGB UNSIGNED_BYTE
 
