ssr reversion, "patchy  water", VL adjustments

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -5,12 +5,11 @@ moon = false
 
 
 
-#if MC_VERSION <= 12140
+
 uniform.float.PaleGardenSmooth = smooth(2, if(biome == BIOME_PALE_GARDEN, 1.0, 0.0), 9.0, 5.0)
-#else
-#else
-uniform.float.PaleGardenSmooth   = 0.0
-#endif
+
+
+
 
 uniform.bool.isColdBiome = in(biome, BIOME_SNOWY_PLAINS, BIOME_SNOWY_TAIGA, BIOME_GROVE, BIOME_FROZEN_RIVER, BIOME_ICE_SPIKES, BIOME_SNOWY_SLOPES, BIOME_FROZEN_PEAKS, BIOME_FROZEN_OCEAN)
 
@@ -24,7 +23,7 @@ customTexture.blueNoiseTex = /textures/stbn.bin TEXTURE_3D RGB8 128 128 64 RGB U
 
 
 customTexture.puddleTex = /textures/puddle_noise.png
-
+customTexture.waterTex = /textures/water_noise.png
 
 screen = NAME <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
