--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,8 +41,8 @@ screen.Fog-Phase = MORNING_PHASE DAY_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE 
 
 screen.Water = WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
 
-screen.Post-Processing = screen = [Bloom] [Color-Grading]
+screen.Post-Processing = screen = [Bloom] [Color-Grading] [Reprojection]
 screen.Color-Grading = BRIGHTNESS SATURATION CONTRAST
 screen.Bloom = BLOOM_GLSL BLOOM_QUALITY BLOOM_RADIUS BLOOM_STRENGTH 
-
-sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT
+screen.Reprojection = TEMPORAL_REPROJECTION TA_FACTOR
+sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT TA_FACTOR
