rough refl improvements, accum tweaks. removed height fog

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -44,5 +44,5 @@ screen.Water = WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY W
 screen.Post-Processing = screen = [Bloom] [Color-Grading] [Reprojection]
 screen.Color-Grading = BRIGHTNESS SATURATION CONTRAST
 screen.Bloom = BLOOM_GLSL BLOOM_QUALITY BLOOM_RADIUS BLOOM_STRENGTH 
-screen.Reprojection = TEMPORAL_REPROJECTION TA_FACTOR
+screen.Reprojection = TEMPORAL_REPROJECTION TA_FACTOR SCREENSHOT_MODE FUN_MODE
 sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT TA_FACTOR
