metal improvements. even greater noise reduction

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -32,7 +32,7 @@ screen.Atmosphere.columns = 1
 
 screen.Lighting-Shading = screen = [Shadows] [Materials]
 screen.Shadows = SUN_ROTATION SHADOW_RESOLUTION SHADOW_SAMPLES SHADOW_SOFTNESS SHADOW_DISTANCE
-screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty>  <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT
+screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty>  <empty> DO_SSR SSR_STEPS <empty> <empty> ROUGH_REFLECTION ROUGH_SAMPLES <empty> <empty> BINARY_REFINEMENT BINARY_COUNT SSR_MIP_BLUR
 
 screen.Atmosphere = screen = [Sky] [Fog]
 screen.Sky = SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
