wave fix in new mc versions, sky refl changes. fog tweaks for new mc versions

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -39,7 +39,7 @@ screen.Sky = SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MUL
 screen.Fog = VOLUMETRICS VL_SAMPLES  VL_EXT AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
 screen.Fog-Phase = MORNING_PHASE DAY_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE <empty> <empty> <empty> FORWARD_PHASE_INTENSITY BACKWARD_PHASE_INTENSITY
 
-screen.Water = WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
+screen.Water = WAVES WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
 
 screen.Post-Processing = screen = [Bloom] [Color-Grading] [Reprojection]
 screen.Color-Grading = BRIGHTNESS SATURATION CONTRAST
