update water fog, improve enviro fog, ssr tweaks, some minor file cleanup

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -25,6 +25,7 @@ uniform.float.hotBiomeSmooth = smooth(2, if(!isHotBiome, 1.0, 0.0), 25.0, 25.0)
 customTexture.blueNoiseTex = /textures/stbn.bin TEXTURE_3D RGB8 128 128 64 RGB UNSIGNED_BYTE
 
 customTexture.starMap = /textures/star_tex.png
+customTexture.fogTex = /textures/fogTex.png
 customTexture.puddleTex = /textures/puddle_noise.png
 customTexture.waterTex = /textures/water_noise.png
 
