optional, raymarched atmospheric fog, improved VL shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,7 +41,7 @@ screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty>  <empty> DO_SSR SS
 
 screen.Atmosphere = screen = [Sky] [Fog]
 screen.Sky = SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
-screen.Fog = ENVIORNMENT_FOG VOLUMETRICS VL_SAMPLES  VL_EXT AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
+screen.Fog = ENVIORNMENT_FOG ADVANCED_FOG_TRACING VOLUMETRICS VL_SAMPLES  VL_EXT AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
 screen.Fog-Phase = MORNING_PHASE DAY_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE <empty> <empty> <empty> FORWARD_PHASE_INTENSITY BACKWARD_PHASE_INTENSITY
 
 screen.Water = WAVES WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
