--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -29,6 +29,7 @@ customTexture.starMap = /textures/star_tex.png
 customTexture.fogTex = /textures/fogTex.png
 customTexture.puddleTex = /textures/puddle_noise.png
 customTexture.waterTex = /textures/water_noise.png
+customTexture.clouds = /textures/clouds.png
 
 screen = NAME <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
@@ -41,13 +42,16 @@ screen.Materials = HC_SSS HC_EMISSION <empty> <empty> <empty>  <empty> DO_SSR SS
 
 screen.Atmosphere = screen = [Sky] [Fog]
 screen.Sky = SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT
-screen.Fog = ENVIORNMENT_FOG ADVANCED_FOG_TRACING VOLUMETRICS VL_SAMPLES  VL_EXT AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY <empty> <empty> screen = [Fog-Phase]
+screen.Fog.columns = 1
+screen.Fog =  VOLUMETRICS ADVANCED_FOG_TRACING STBN_SAMPLES screen = [Basic-Volumetric-Fog-Settings] screen = [Advanced-Fog-Settings]  screen = [Fog-Phase]
 screen.Fog-Phase = MORNING_PHASE DAY_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE <empty> <empty> <empty> FORWARD_PHASE_INTENSITY BACKWARD_PHASE_INTENSITY
-
+screen.Advanced-Fog-Settings = TRACING_DISTANCE STEP_SIZE FOG_DENSITY NOISE_SAMPLING WEATHER_DENSITY MS_FALLOFF MS_POWER screen = [Noise-Configuration]
+screen.Basic-Volumetric-Fog-Settings = VL_SAMPLES  VL_EXT MULTI_SCATTER_INTENSITY
+screen.Noise-Configuration = NOISE_SCALE CLOUD_NOISE_SCALE WIND_SPEED DENSITY_THRESHOLD CLOUD_DENSITY_THRESHOLD
 screen.Water = WAVES WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS
 
 screen.Post-Processing = screen = [Bloom] [Color-Grading] [Reprojection]
 screen.Color-Grading = BRIGHTNESS SATURATION CONTRAST
 screen.Bloom = BLOOM_GLSL BLOOM_QUALITY BLOOM_RADIUS BLOOM_STRENGTH 
 screen.Reprojection = TEMPORAL_REPROJECTION TA_FACTOR SCREENSHOT_MODE FUN_MODE
-sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT TA_FACTOR
+sliders = SSR_STEPS VL_SAMPLES SHADOW SAMPLES BLOOM_QUALITY SHADOW_SOFTNESS SHADOW_DISTANCE WAVE_FREQUENCY WAVE_SPEED WAVE_OCTAVES WAVE_PULL WAVE_INTENSITY WAVE_RANDOMNESS BLOOM_RADIUS BLOOM_STRENGTH BRIGHTNESS CONTRAST SATURATION WATER_FOG_DENSITY UNDERWATER_FOG_DENSITY SCATTER_COEFF ABSORPTION_COEFF ABSORPTION_R ABSORPTION_G ABSORPTION_B SCATTER_R SCATTER_G SCATTER_B ROUGH_SAMPLES BINARY_COUNT SUN_ANGULAR_RADIUS_MULT MOON_ANGULAR_RADIUS_MULT SUN_BRIGHTNESS_MULT MOON_BRIGHTNESS_MULT DAY_PHASE MORNING_PHASE NOON_PHASE EVENING_PHASE NIGHT_PHASE AMBIENT_FOG_MULT MULTI_SCATTER_INTENSITY VL_EXT TA_FACTOR FOG_DENSITY WEATHER_DENSITY TRACING_DISTANCE MS_FALLOFF MS_POWER STBN_SAMPLES STEP_SIZE WIND_SPEED DENSITY_THRESHOLD NOISE_SCALE CLOUD_NOISE_SCALE CLOUD_DENSITY_THRESHOLD
