pushing so i can have this stuff for later

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -31,7 +31,8 @@ customTexture.fogTex = /textures/fogTex.png
 customTexture.puddleTex = /textures/puddle_noise.png
 customTexture.waterTex = /textures/water_noise.png
 customTexture.clouds = /textures/clouds.png
-
+customTexture.cloudBase = /textures/cloudTex.png 
+customTexture.detail = /textures/detail.png 
 screen = NAME <empty> <empty>  <empty> [Lighting-Shading] [Atmosphere] [Water] [Post-Processing] 
 screen.columns = 1
 screen.Post-Processing.columns = 1
