--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -13,7 +13,7 @@ sky = false
 uniform.float.PaleGardenSmooth = smooth(2, if(biome == BIOME_PALE_GARDEN, 1.0, 0.0), 9.0, 5.0)
 
 
-
+iris.features.required=SEPARATE_HARDWARE_SAMPLERS BLOCK_EMISSION_ATTRIBUTE HIGHER_SHADOWCOLOR
 
 uniform.bool.isColdBiome = in(biome, BIOME_SNOWY_PLAINS, BIOME_SNOWY_TAIGA, BIOME_GROVE, BIOME_FROZEN_RIVER, BIOME_ICE_SPIKES, BIOME_SNOWY_SLOPES, BIOME_FROZEN_PEAKS, BIOME_FROZEN_OCEAN)
 
